# spin-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/agents/: spin-sync-pr-reviewer.md
.github/workflows/: spin-sync.yml
docs/: architecture.md  bug-duplicate-merge-call.md  strava-streams-migration.md  test-plan-strava-delete-e2e.md
scripts/: garmin_auth.py  install_cron.sh  merge_local.py  strava_auth.py
src/: merge_fit.py  sync.py
tests/: test_garmin_matching.py  test_strava_errors.py  test_sync.py  test_sync_pr13.py  test_sync_pr14.py  test_sync_pr15.py
