[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project]
name = "spin-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.40.0",
  "fit-tool>=0.9.15",
  "python-fitparse>=1.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]
